# esp-box-emu

./: CLAUDE.md  CMakeLists.txt  sdkconfig.defaults
components/box-emu/: CMakeLists.txt  idf_component.yml
components/box-emu/include/: box-emu.hpp
components/box-emu/src/: box-emu.cpp
components/custom-bsp/: CMakeLists.txt  idf_component.yml
components/custom-bsp/include/: custom-bsp.hpp
components/custom-bsp/src/: custom-bsp.cpp
components/genesis/src/: genesis.cpp
components/gui/: CMakeLists.txt
components/menu/: CMakeLists.txt
components/menu/include/: menu.hpp
components/msx/src/: msx.cpp
main/: cart.hpp  carts.hpp  main.cpp
