idf_component_register(
  INCLUDE_DIRS "include"
  SRC_DIRS "src"
  REQUIRES
  "driver"
  "heap"
  "fatfs"
  "esp_lcd"
  "esp_psram"
  "hal"
  "usb"
  "esp_tinyusb"
  "lvgl"
  "adc"
  "aw9523"
  "button"
  "drv2605"
  "i2c"
  "input_drivers"
  "mcp23x17"
  "event_manager"
  "events"
  "task"
  "timer"
  "serialization"
  "statistics"
  "max1704x"
  "custom-bsp"
  "pool_allocator"
  )
